src/mobius.esc/escjava/tags/escjava-2-0a6/ESCTools/Javafe/test/javafe/test/fe/test17/ans.correct
Public.java:1: Error: Supertype is not accessible.
class Public extends p.Private {}       // error: Private not accessib ...
                     ^
1 error
<Error in import statement in Public3.java>		// replace
1 error
<Error in reference to class B in C.java>		// replace
1 error
